added a dynamic backgroud and my cv

--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -1,3 +1,5 @@
+@import url('../ColourPalette.css');
+
 .name-profilePic {
     position: absolute;
     top: 50%;
@@ -22,19 +24,22 @@
 .display-name {
     font-family: 'Computer Modern';
     font-size: 3em;
+    color: var(--font-color);
     transition: all, 1s ease-in;
 }
 
 .defocus-display-name {
     font-family: 'Computer Modern';
     font-size: 1em;
+    color: var(--font-color);
     transition: all, 1s ease-in;
 }
 
 .profile-picture {
     width: 15em;
     height: 15em;
-    border-radius: 10em;
+    border-radius: 50%;
+    border: 2px solid grey;
     box-shadow: 0 0 5em rgba(0, 0, 0, 0.7);
     transition: all, 1s ease-in;
 }
@@ -42,7 +47,8 @@
 .defocus-profile-picture {
     width: 5em;
     height: 5em;
-    border-radius: 10em;
+    border-radius: 50%;
+    border: 2px solid grey;
     box-shadow: 0 0 5em rgba(0, 0, 0, 0.7);
     transition: all, 1s ease-in;
 }
